# rustfinity.com

./: .gitignore  Cargo.toml  LICENSE  README.MD  README.md
.github/workflows/: ci.yaml  crates.yaml  rustfinity-runner.yaml
challenges/: Cargo.toml  challenges.json  cli.rs  lib.rs  tests.rs
challenges/advanced-match-patterns/: Cargo.toml  description.md
challenges/advanced-traits/: Cargo.toml  description.md
challenges/animal-sanctuary-registry/: Cargo.toml  description.md
challenges/animal-sounds/: Cargo.toml  description.md
challenges/associated-types/: Cargo.toml  description.md
challenges/box-t/: Cargo.toml  description.md
challenges/channels/: Cargo.toml  description.md
challenges/character-counting-string/: Cargo.toml  description.md
challenges/closure-types/: Cargo.toml  description.md
challenges/closures/: Cargo.toml  description.md
challenges/complex-enums/: Cargo.toml  description.md
challenges/concurrency/: Cargo.toml  description.md
challenges/constants/: Cargo.toml  description.md
challenges/constructors/: Cargo.toml  description.md
challenges/control-flow/: Cargo.toml  description.md
challenges/converting-numerical-types/: Cargo.toml  description.md
challenges/countdown/: Cargo.toml  description.md
challenges/declaring-variables/: Cargo.toml  description.md
challenges/derive-debug-for-structs/: Cargo.toml  description.md
challenges/derive-partial-eq/: Cargo.toml  description.md
challenges/determine-number-characteristics/: Cargo.toml  README.md
challenges/enums/: description.md
challenges/error-propagation/: Cargo.toml  description.md
challenges/factorial-calculator/: Cargo.toml  description.md
challenges/fibonacci/: description.md
challenges/find-the-first-palindrome/: Cargo.toml  description.md
challenges/finite-state-automaton/: Cargo.toml  README.md  description.md
challenges/fizz-buzz/: Cargo.toml  README.md
challenges/functions/: description.md
challenges/generics/: description.md
challenges/graceful-error-handling/: Cargo.toml  README.md  description.md
challenges/graceful-error-handling-2/: Cargo.toml  description.md
challenges/hashmaps/: description.md
challenges/hello-world/: README.md
challenges/if-else/: Cargo.toml  README.md
challenges/if-let-enums/: Cargo.toml  description.md
challenges/interior-mutability/: Cargo.toml  description.md
challenges/rc/: Cargo.toml  (+1 more)
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cargo_toml.rs  challenge.rs  cli.rs  constants.rs  crates_io.rs  dir.rs  download.rs  editor.rs  main.rs
crates/cli/src/commands/: submit.rs
crates/syntest/: Cargo.toml  README.md
crates/syntest/src/: constants.rs  func.rs  lib.rs  mac.rs  mutation.rs  syn.rs  syntest.rs  utils.rs  var.rs  visitor.rs
(+439 files in other folders)
