[workspace]
members = [
  "challenges",
  "challenges/hello-world",
  "challenges/character-counting-string",
  "challenges/fibonacci",
  "challenges/fizz-buzz",
  "challenges/mathematical-operations",
  "challenges/the-from-trait",
  "challenges/animal-sanctuary-registry",
  "challenges/median-and-mode",
  "challenges/graceful-error-handling",

  "crates/cli",
]
resolver = "2"
